# mmdetection-to-tensorrt

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  setup.py
.github/: python-package.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
demo/: inference.py
demo/cpp/: CMakeLists.txt  FindTensorRT.cmake  README.md  data.h  inout_transform.h  main.cpp
docker/: Dockerfile
docs/: FAQ.md  getting_started.md
mmdet2trt/: __init__.py  __main__.py  mmdet2trt.py
mmdet2trt/apis/: __init__.py  inference.py  test.py
mmdet2trt/converters/: ConvAWS2d.py  ConvWS2d.py  DeformConv.py  DeformPool.py  MaskedConv.py  RoiExtractor.py  SAConv2d.py  __init__.py  anchor_generator.py  batched_nms.py  bfp_forward.py  carafe.py  delta2bbox_custom.py  generalized_attention.py  mmcv_roi_aligin.py  mmdet2trtOps.py  vfnet.py
mmdet2trt/converters/plugins/: __init__.py  create_batchednms_plugin.py  create_carafefeaturereassemble_plugin.py  create_dcn_plugin.py  create_deformable_pool_plugin.py  create_delta2bbox_custom_plugin.py  create_gridanchordynamic_plugin.py  create_roiextractor_plugin.py  globals.py
mmdet2trt/core/: __init__.py
mmdet2trt/core/anchor/: __init__.py  anchor_generator.py  point_generator.py
mmdet2trt/core/bbox/: __init__.py  transforms.py
mmdet2trt/core/post_processing/: __init__.py  batched_nms.py  merge_augs.py
mmdet2trt/models/: __init__.py  builder.py
mmdet2trt/ops/: __init__.py  util_ops.py
tests/: model_test.py
tools/: collect_env.py  test.py
(+71 files in other folders)
